--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     },
     {
      text: "What is your preferred travel style?",
-     options: ["Budget", "Backpaching", "Luxury"]
+     options: ["Budget", "Backpacking", "Luxury"]
     },
     {
      text: "Number of days you want to stay",
