--- a/index.html
+++ b/index.html
@@ -1,241 +1,207 @@
 <!DOCTYPE html>
- <html lang="en">
- <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Travel Budget</title>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6I_IKP5hiZ03m9S55DZWS5pw9KWsYwig&libraries=places"></script>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="style2.css">
- </head>
- <body>
-
-
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style2.css" />
+</head>
+<body>
   <h3 id="result"></h3>
 
   <div class="container">
-   <h2>Travel Budget Calculator</h2>
-   <div class="input-group">
-    <label for="from">From:</label>
-    <input type="text" id="from" placeholder="Enter starting location">
-   </div>
-   <div class="input-group">
-    <label for="to">To:</label>
-    <input type="text" id="to" placeholder="Enter destination">
-   </div>
-   <button onclick="calculateDistance()">Calculate Distance</button>
+    <h2>Travel Budget Calculator</h2>
+    <div class="input-group">
+      <label for="from">From:</label>
+      <input type="text" id="from" placeholder="Enter starting location" />
+    </div>
+    <div class="input-group">
+      <label for="to">To:</label>
+      <input type="text" id="to" placeholder="Enter destination" />
+    </div>
+    <button onclick="calculateDistance()">Calculate Distance</button>
   </div>
 
   <div id="popup" class="popup">
-   <h3 id="distanceText"></h3>
-   <p>Select your vehicle:</p>
-   <button onclick="selectTravelMode(1.5, 'Normal Bus')">Normal Bus</button>
-   <button onclick="selectTravelMode(3, 'AC Bus')">AC Bus</button>
-   <button onclick="selectTravelMode(7, 'Personal Car')">Personal Car</button>
-   <button onclick="selectTravelMode(2.5, 'Personal Bike')">Personal Bike</button>
-   <p id="priceText"></p>
-   <input type="hidden" id="basePrice" value="">
-   <button onclick="closePopup()">Close</button>
+    <h3 id="distanceText"></h3>
+    <p>Select your vehicle:</p>
+    <button onclick="selectTravelMode(1.5, 'Normal Bus')">Normal Bus</button>
+    <button onclick="selectTravelMode(3, 'AC Bus')">AC Bus</button>
+    <button onclick="selectTravelMode(7, 'Personal Car')">Personal Car</button>
+    <button onclick="selectTravelMode(2.5, 'Personal Bike')">Personal Bike</button>
+    <p id="priceText"></p>
+    <input type="hidden" id="basePrice" value="" />
+    <button onclick="closePopup()">Close</button>
   </div>
 
   <div id="questionPopup" class="popup" style="display:none;">
-   <h3 id="questionText"></h3>
-   <div id="options"></div>
-   <button onclick="nextQuestion()">Next</button>
+    <h3 id="questionText"></h3>
+    <div id="options"></div>
+    <button onclick="nextQuestion()">Next</button>
   </div>
 
   <div id="finalBudgetPopup" class="popup" style="display:none;">
-   <h3>Estimated Final Budget</h3>
-   <p id="finalBudgetAmount"></p>
-   <button onclick="closeFinalBudgetPopup()">Close</button>
+    <h3>Estimated Final Budget</h3>
+    <p id="finalBudgetAmount"></p>
+    <button onclick="closeFinalBudgetPopup()">Close</button>
   </div>
 
   <script>
-   let totalDistance = 0;
-   let travelData = {};
-   let currentQuestionIndex = 0;
+    let totalDistance = 0;
+    let travelData = {};
+    let currentQuestionIndex = 0;
 
-   function calculateDistance() {
-    const from = document.getElementById("from").value;
-    const to = document.getElementById("to").value;
-    const service = new google.maps.DistanceMatrixService();
-
-    service.getDistanceMatrix({
-     origins: [from],
-     destinations: [to],
-     travelMode: 'DRIVING',
-    }, (response, status) => {
-     if (status !== 'OK' || !response.rows[0].elements[0].distance) {
-      alert("Error calculating distance. Please try again.");
-      return;
-     }
-
-     totalDistance = response.rows[0].elements[0].distance.value / 1000; // Convert meters to km
-     document.getElementById("distanceText").innerText = `Total distance is ${totalDistance.toFixed(2)} km`;
-     document.getElementById("popup").style.display = "block";
-    });
-   }
-
-   function selectTravelMode(rate, mode) {
-    const price = totalDistance * rate;
-    document.getElementById("priceText").innerText = `Estimated cost: ₹${price.toFixed(2)}`;
-    document.getElementById("basePrice").value = price.toFixed(2); // Store in hidden input
-
-    travelData["mode"] = mode;
-    travelData["cost"] = price.toFixed(2);
-    travelData["distance"] = totalDistance.toFixed(2);
-
-    setTimeout(() => {
-     document.getElementById("popup").style.display = "none";
-     showQuestionPopup();
-    }, 1000);
-   }
-
-   function showQuestionPopup() {
-    currentQuestionIndex = 0;
-    document.getElementById("questionPopup").style.display = "block";
-    displayQuestion();
-   }
-
-   const questions = [
-    {
-     text: "How many people are travelling in total?",
-     options: ["1", "2", "3", "4","5","More than 5"]
-    },
-    {
-     text: "What is your preferred travel style?",
-     options: ["Budget", "Backpacking", "Luxury"]
-    },
-    {
-     text: "Number of days you want to stay",
-     options: ["1-3", "4-6", "7-9", "10-12", "13-15"]
-    }
-   ];
-
-   function displayQuestion() {
-    if (currentQuestionIndex >= questions.length) {
-     document.getElementById("questionPopup").style.display = "none";
-     // Trigger the display of the final budget popup here
-     showFinalBudgetPopup();
-     return;
-    }
-
-    const questionData = questions[currentQuestionIndex];
-    document.getElementById("questionText").innerText = questionData.text;
-    const optionsContainer = document.getElementById("options");
-    optionsContainer.innerHTML = "";
-
-    questionData.options.forEach(option => {
-     let button = document.createElement("button");
-     button.innerText = option;
-     button.onclick = () => saveAnswer(questionData.text, option);
-     optionsContainer.appendChild(button);
-    });
-   }
-
-   function saveAnswer(question, answer) {
-    travelData[question] = answer;
-
-    if (question === "How many people are travelling in total?") {
-     let numberOfPeople = 1;
-     if (answer === "2") {
-      numberOfPeople = 2;
-     } else if (answer === "3") {
-      numberOfPeople = 3; 
-     }else if (answer === "4") {
-      numberOfPeople = 4; 
-     } else if (answer === "5") {
-      numberOfPeople = 5;
-     }else if (answer === "More than 5") {
-      numberOfPeople = 8; // Assuming a minimum of 6
-     }
-     travelData["numberOfPeople"] = numberOfPeople;
-
-     const baseCost = parseFloat(document.getElementById("basePrice").value);
-     if (!isNaN(baseCost) && numberOfPeople > 0) {
-      const perPersonCost = baseCost / numberOfPeople;
-      travelData["perPersonTransportationCost"] = perPersonCost.toFixed(2);
-      document.getElementById("priceText").innerText += ` (₹${perPersonCost.toFixed(2)} per person)`;
-     }
-    } else if (question === "What is your preferred travel style?") {
-     const perPersonTransportationCost = parseFloat(travelData["perPersonTransportationCost"]);
-     if (!isNaN(perPersonTransportationCost)) {
-      let multiplier = 1;
-      if (answer === "Budget") {
-       multiplier = 4;
-      } else if (answer === "Backpacking") {
-       multiplier = 6;
-      } else if (answer === "Luxury") {
-       multiplier = 8;
+    const questions = [
+      {
+        text: "How many people are travelling in total?",
+        options: ["1", "2", "3", "4", "5", "More than 5"]
+      },
+      {
+        text: "What is your preferred travel style?",
+        options: ["Budget", "Backpacking", "Luxury"]
+      },
+      {
+        text: "Number of days you want to stay",
+        options: ["1-3", "4-6", "7-9", "10-12", "13-15"]
       }
-      const styleAdjustedCost = perPersonTransportationCost * multiplier;
-      travelData["styleAdjustedCost"] = styleAdjustedCost.toFixed(2);
-      document.getElementById("questionText").innerText += `\n(Style adjusted cost: ₹${styleAdjustedCost.toFixed(2)} per person)`;
-     }
-    } else if (question === "Number of days you want to stay") {
-     const styleAdjustedCost = parseFloat(travelData["styleAdjustedCost"]);
-     if (!isNaN(styleAdjustedCost)) {
-      let daysMultiplier = 1;
-      const daysRange = answer.split('-').map(Number);
-      const minDays = daysRange[0];
+    ];
 
-      if (minDays >= 1 && minDays <= 3) {
-       daysMultiplier = 3;
-      } else if (minDays >= 4 && minDays <= 6) {
-       daysMultiplier = 5;
-      } else if (minDays >= 7 && minDays <= 9) {
-       daysMultiplier = 8;
-      } else if (minDays >= 10 && minDays <= 12) {
-       daysMultiplier =10;
-      } else if (minDays >= 13 && minDays <= 15) {
-       daysMultiplier = 12;
+    function calculateDistance() {
+      const from = document.getElementById("from").value;
+      const to = document.getElementById("to").value;
+      const service = new google.maps.DistanceMatrixService();
+
+      service.getDistanceMatrix({
+        origins: [from],
+        destinations: [to],
+        travelMode: 'DRIVING'
+      }, (response, status) => {
+        if (status !== 'OK' || !response.rows[0].elements[0].distance) {
+          alert("Error calculating distance. Please try again.");
+          return;
+        }
+
+        totalDistance = response.rows[0].elements[0].distance.value / 1000; // meters to km
+        document.getElementById("distanceText").innerText = `Total distance is ${totalDistance.toFixed(2)} km`;
+        document.getElementById("popup").style.display = "block";
+      });
+    }
+
+    function selectTravelMode(rate, mode) {
+      const price = totalDistance * rate;
+      travelData["mode"] = mode;
+      travelData["cost"] = price.toFixed(2);
+      travelData["distance"] = totalDistance.toFixed(2);
+      document.getElementById("basePrice").value = price.toFixed(2);
+
+      document.getElementById("priceText").innerText = `Estimated cost: ₹${price.toFixed(2)}`;
+      
+      setTimeout(() => {
+        document.getElementById("popup").style.display = "none";
+        showQuestionPopup();
+      }, 1000);
+    }
+
+    function showQuestionPopup() {
+      currentQuestionIndex = 0;
+      document.getElementById("questionPopup").style.display = "block";
+      displayQuestion();
+    }
+
+    function displayQuestion() {
+      if (currentQuestionIndex >= questions.length) {
+        document.getElementById("questionPopup").style.display = "none";
+        showFinalBudgetPopup();
+        return;
       }
 
-      const finalEstimatedCost = styleAdjustedCost * daysMultiplier;
-      travelData["finalEstimatedCost"] = finalEstimatedCost.toFixed(2);
-      console.log("Final Travel Data:", travelData); // For debugging
-      // We will now call the function to show the final budget popup
-     }
+      const q = questions[currentQuestionIndex];
+      document.getElementById("questionText").innerText = q.text;
+
+      const optionsContainer = document.getElementById("options");
+      optionsContainer.innerHTML = "";
+
+      q.options.forEach(option => {
+        const btn = document.createElement("button");
+        btn.innerText = option;
+        btn.onclick = () => saveAnswer(q.text, option);
+        optionsContainer.appendChild(btn);
+      });
     }
 
-    localStorage.setItem("travelData", JSON.stringify(travelData));
-    currentQuestionIndex++;
-    displayQuestion();
-   }
+    function saveAnswer(question, answer) {
+      travelData[question] = answer;
 
-   function sendDataToFlask(travelData) {
-    fetch('http://127.0.0.1:5000/predict', { // Change this if deployed
-     method: 'POST',
-     headers: {
-      'Content-Type': 'application/json'
-     },
-     body: JSON.stringify(travelData)
-    })
-    .then(response => response.json())
-    .then(data => {
-     console.log("API Response:", data);
-     // You might want to update the final budget display with the Flask response
-     document.getElementById("finalBudgetAmount").innerText = `₹${data.budget}`;
-     document.getElementById("finalBudgetPopup").style.display = "block";
-    })
-    .catch(error => console.error("Error:", error));
-   }
+      if (question === "How many people are travelling in total?") {
+        let num = 1;
+        if (answer === "2") num = 2;
+        else if (answer === "3") num = 3;
+        else if (answer === "4") num = 4;
+        else if (answer === "5") num = 5;
+        else if (answer === "More than 5") num = 8;
 
-   // Function to show the final budget popup
-   function showFinalBudgetPopup() {
-    const finalCost = travelData["finalEstimatedCost"];
-    if (finalCost) {
-     document.getElementById("finalBudgetAmount").innerText = `₹${finalCost}`;
-     document.getElementById("finalBudgetPopup").style.display = "block";
-    } else {
-     alert("Could not calculate the final budget.");
+        travelData["numberOfPeople"] = num;
+
+        const baseCost = parseFloat(travelData["cost"]);
+        if (!isNaN(baseCost)) {
+          const perPerson = baseCost / num;
+          travelData["perPersonTransportationCost"] = perPerson.toFixed(2);
+        }
+      }
+
+      if (question === "What is your preferred travel style?") {
+        const perPerson = parseFloat(travelData["perPersonTransportationCost"]);
+        if (!isNaN(perPerson)) {
+          let multiplier = answer === "Budget" ? 4 : answer === "Backpacking" ? 6 : 8;
+          travelData["styleAdjustedCost"] = (perPerson * multiplier).toFixed(2);
+        }
+      }
+
+      if (question === "Number of days you want to stay") {
+        const styleCost = parseFloat(travelData["styleAdjustedCost"]);
+        if (!isNaN(styleCost)) {
+          let daysMultiplier = 1;
+          const daysRange = answer.split('-').map(Number);
+          const minDays = daysRange[0];
+
+          if (minDays >= 1 && minDays <= 3) daysMultiplier = 3;
+          else if (minDays >= 4 && minDays <= 6) daysMultiplier = 5;
+          else if (minDays >= 7 && minDays <= 9) daysMultiplier = 8;
+          else if (minDays >= 10 && minDays <= 12) daysMultiplier = 10;
+          else if (minDays >= 13) daysMultiplier = 12;
+
+          travelData["finalEstimatedCost"] = (styleCost * daysMultiplier).toFixed(2);
+        }
+      }
+
+      localStorage.setItem("travelData", JSON.stringify(travelData));
+      currentQuestionIndex++;
+      displayQuestion();
     }
-   }
 
-   // Function to close the final budget popup
-   function closeFinalBudgetPopup() {
-    document.getElementById("finalBudgetPopup").style.display = "none";
-   }
+    function showFinalBudgetPopup() {
+      const cost = travelData["finalEstimatedCost"];
+      if (cost) {
+        document.getElementById("finalBudgetAmount").innerText = `₹${cost}`;
+        document.getElementById("finalBudgetPopup").style.display = "block";
+      } else {
+        alert("Unable to calculate final budget.");
+      }
+    }
+
+    function closePopup() {
+      document.getElementById("popup").style.display = "none";
+    }
+
+    function closeFinalBudgetPopup() {
+      document.getElementById("finalBudgetPopup").style.display = "none";
+    }
+
+    function nextQuestion() {
+      displayQuestion();
+    }
   </script>
- </body>
- </html>
+</body>
+</html>
