--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
         const baseCost = parseFloat(travelData["cost"]);
         if (!isNaN(baseCost)) {
-          const perPerson = baseCost / num;
+          const perPerson = baseCost ;
           travelData["perPersonTransportationCost"] = perPerson.toFixed(2);
         }
       }
